--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "engines": {
     "node": "5.12.0"
-  }, 
+  },
   "main": "index.js",
   "author": "Zach McCleaf",
   "dependencies": {
     "bower": "^1.7.9",
     "bower-installer": "^1.2.0",
     "express": "^4.14.0",
-    "express-sessions": "^1.0.6",
+    "express-session": "^1.14.2",
     "grunt": "^1.0.1",
     "grunt-cli": "^1.2.0",
     "grunt-coffeelint": "0.0.16",
